[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/remote_list/remote_list.gd" type="Script" id=1]

[node name="remote_list" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 29.0
margin_top = 21.0
margin_right = 198.0
margin_bottom = 160.0

[node name="create" type="Button" parent="menu"]
margin_right = 169.0
margin_bottom = 20.0
text = "Create"

[node name="refresh" type="Button" parent="menu"]
margin_top = 24.0
margin_right = 169.0
margin_bottom = 44.0
text = "Refresh"

[node name="split" type="VSplitContainer" parent="menu"]
margin_top = 48.0
margin_right = 169.0
margin_bottom = 48.0

[node name="cancel" type="Button" parent="menu"]
margin_top = 52.0
margin_right = 169.0
margin_bottom = 72.0
text = "Cancel"

[node name="list" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 235.0
margin_top = 23.0
margin_right = -30.0
margin_bottom = -30.0

[node name="box" type="VBoxContainer" parent="list"]
margin_right = 759.0
size_flags_horizontal = 3

[node name="loading" type="WindowDialog" parent="."]
margin_right = 48.0
margin_bottom = 40.0
window_title = "Loading..."

[node name="Label" type="Label" parent="loading"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Loading.."
align = 1
valign = 1

[node name="alert" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "Error"

[connection signal="pressed" from="menu/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="menu/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="menu/cancel" to="." method="_on_cancel_pressed"]
